--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
   <h1>Create a comment</h1>
+  <form action="/comments" method="post">
+    <input id="comment" placeholder="enter a comment here">
+    <button id="submit-button">Submit</button>
+  </form>
+
+  <div id="comments-container">
+    #{}
+  </div>
 </body>
 </html>
