added html etc hanging because not hitting css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="/static/styles/index.css" rel="stylesheet"/>
+  <!-- we are not reading this local -->
   <title>Comments App</title>
 </head>
 <body>
