--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <h1>Create a comment</h1>
   <form action="/comments" method="post">
-    <input id="comment" placeholder="enter a comment here">
+    <input id="comment" placeholder="enter a comment here" name="comment">
     <button id="submit-button">Submit</button>
   </form>
 
   <div id="comments-container">
-    #{}
+    #{comments}
   </div>
 </body>
 </html>
